--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -7,9 +7,10 @@ textColor = "#262730"
 font = "sans serif"
 
 [server]
-headless =true
-port = 8501
-enableCORS = false 
+headless = true
 
-[client]
-toolbarMode = 'minimal'
+
+[postinstall]
+commands = [
+  "python -m spacy download en_core_web_sm"
+]
