--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,9 @@ langdetect
 deep-translator
 reportlab
 PyMuPDF
-transformers
+transformers==4.40.1
 sentence-transformers
-torch
+torch>=1.12.0
 plotly
 keybert
 scikit-learn
