--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+--constraint constraints.txt
 streamlit
 spacy
 pandas
@@ -6,11 +7,9 @@ langdetect
 deep-translator
 reportlab
 PyMuPDF
-transformers==4.30.2
+transformers
 sentence-transformers
 torch>=1.12.0
 plotly
 keybert
 scikit-learn
-
-
