--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
---constraint constraints.txt
 streamlit
 spacy
 pandas
@@ -7,8 +6,10 @@ langdetect
 deep-translator
 reportlab
 PyMuPDF
-transformers
-sentence-transformers
+transformers==4.30.2
+sentence-transformers==2.2.2
+tokenizers==0.13.3
+sentencepiece==0.1.99
 torch>=1.12.0
 plotly
 keybert
